tests/fail/zero_frequency.stderr
error: number would be zero for non-zero type
 --> tests/fail/zero_frequency.rs:9:39
  |
9 |     let _wave = sine_wave!(frequency: 0);
  |                                       ^
